Update company details and statistics in index.html

--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
     </div>
 
     <div class="hero-content">
-      <p class="hero-eyebrow">Licensed &amp; Insured · Est. 1998</p>
+      <p class="hero-eyebrow">Licensed &amp; Insured · Est. 2006</p>
       <h1 class="hero-title">We<br>Move<br><em>Mountains.</em></h1>
       <p class="hero-sub">Heavy hauling, site clearing, and material delivery across the region. Fleet of 5 trucks. No load too large.</p>
       <div class="hero-actions">
@@ -697,7 +697,7 @@
   <!-- STATS STRIP -->
   <div class="stats-strip">
     <div class="stat">
-      <div class="stat-num">40+</div>
+      <div class="stat-num">5+</div>
       <div class="stat-label">Trucks in Fleet</div>
     </div>
     <div class="stat">
@@ -705,7 +705,7 @@
       <div class="stat-label">Loads Delivered</div>
     </div>
     <div class="stat">
-      <div class="stat-num">26</div>
+      <div class="stat-num">20</div>
       <div class="stat-label">Years in Business</div>
     </div>
     <div class="stat">
@@ -823,7 +823,7 @@
           <div class="contact-detail-icon">✉️</div>
           <div class="contact-detail-text">
             <strong>Email</strong>
-            <span>dispatch@economaxllc.com</span>
+            <span>dispatch@economax.llc</span>
           </div>
         </div>
         <div class="contact-detail">
@@ -909,7 +909,7 @@
       <li><a href="#contact">Contact</a></li>
       <li><a href="#">Privacy Policy</a></li>
     </ul>
-    <div class="footer-copy">© 2024 EconoMax, LLC. All rights reserved.</div>
+    <div class="footer-copy">© 2026 EconoMax, LLC. All rights reserved.</div>
   </footer>
 
 </body>
