--- a/index.html
+++ b/index.html
@@ -1090,16 +1090,8 @@
       // Probe a list of candidate filenames; any that load successfully
       // will be added to the carousel automatically.
       const CANDIDATE_FILENAMES = [
-        'truck1.jpg','truck2.jpg','truck3.jpg','truck4.jpg','truck5.jpg',
-        'truck1.jpeg','truck2.jpeg','truck3.jpeg','truck4.jpeg','truck5.jpeg',
-        'truck1.png','truck2.png','truck3.png','truck4.png','truck5.png',
         'fleet1.jpg','fleet2.jpg','fleet3.jpg','fleet4.jpg','fleet5.jpg',
-        'fleet1.jpeg','fleet2.jpeg','fleet3.jpeg','fleet4.jpeg','fleet5.jpeg',
-        'fleet1.png','fleet2.png','fleet3.png','fleet4.png','fleet5.png',
-        '1.jpg','2.jpg','3.jpg','4.jpg','5.jpg',
-        '1.png','2.png','3.png','4.png','5.png',
-        'volvo_vhd64f200.jpg','kenworth_t880.jpg','kenworth_w900b.jpg','volvo_vhd64b300.jpg',
-        'volvo_vhd64f200.png','kenworth_t880.png','kenworth_w900b.png','volvo_vhd64b300.png',
+        'fleet6.jpg','fleet7.jpg','fleet8.jpg','fleet9.jpg','fleet10.jpg',
       ];
       // ── End Configuration ──────────────────────────────────────
 
