--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
       // patterns. Add or remove filenames here to match your actual files.
       // Supported extensions: .jpg, .jpeg, .png (case-insensitive).
       // The script will silently skip any image that fails to load.
-      const FLEET_IMAGE_DIR = '/images/fleet/';
+      const FLEET_IMAGE_DIR = '/web/images/fleet/';
 
       // Probe a list of candidate filenames; any that load successfully
       // will be added to the carousel automatically.
