--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
         <!-- Company text on bed -->
         <text x="450" y="225" font-family="'Bebas Neue',sans-serif" font-size="38" fill="#F5C200" text-anchor="middle" letter-spacing="4" opacity="0.85">ECONOMAX, LLC</text>
         <!-- Phone number -->
-        <text x="450" y="260" font-family="'Barlow Condensed',sans-serif" font-size="18" fill="rgba(255,255,255,0.5)" text-anchor="middle" letter-spacing="2">(555) 800-HAUL</text>
+        <text x="450" y="260" font-family="'Barlow Condensed',sans-serif" font-size="18" fill="rgba(255,255,255,0.5)" text-anchor="middle" letter-spacing="2">(404) 555-1212</text>
       </svg>
     </div>
 
@@ -1014,7 +1014,7 @@
     <div class="callout-box">
       <h3>Ready to Move<br>Material Today?</h3>
       <p>Same-day and next-morning dispatch available for most load types in our service area. Call now and talk to a real dispatcher.</p>
-      <a href="tel:5558004285" class="btn-dark">📞 Call (555) 800-HAUL</a>
+      <a href="tel:4045551212" class="btn-dark">📞 Call (404) 555-1212</a>
     </div>
   </section>
 
@@ -1237,21 +1237,21 @@
           <div class="contact-detail-icon">📞</div>
           <div class="contact-detail-text">
             <strong>Phone / Dispatch</strong>
-            <span>(555) 800-HAUL</span>
+            <span>(404) 555-1212</span>
           </div>
         </div>
         <div class="contact-detail">
           <div class="contact-detail-icon">✉️</div>
           <div class="contact-detail-text">
             <strong>Email</strong>
-            <span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="1074796360716473785075737f7e7f7d71683e7c7c73">[email&#160;protected]</a></span>
+            <span>dispatch@economax.llc</span>
           </div>
         </div>
         <div class="contact-detail">
           <div class="contact-detail-icon">📍</div>
           <div class="contact-detail-text">
             <strong>Yard Address</strong>
-            <span>4800 Industrial Blvd, Your City, ST 00000</span>
+            <span>3343 Lathenview Ct, NO, Alpharetta, GA, 30004, USA</span>
           </div>
         </div>
         <div class="contact-detail">
